--- a/lang/it_IT.lang
+++ b/lang/it_IT.lang
@@ -8,6 +8,7 @@ command.invalid-args: "Usa /%COMMAND% con opzioni !"
 
 error.not-in-bounds: "'%VAR%' non può essere > %MAX% oppure < %MIN% !"
 error.nothing-to-delete: "Niente da cancellare . . . (forse i messaggi sono vecchi da più di 2 settimane?)"
+error.need-text-channel: "Si prega di inserire un testo lounge valido"
 
 command.mod.description: "%TARGET% è stato sanzionato(a)"
 command.mod.reason: "Motivo"
@@ -19,6 +20,9 @@ command.mod.deleted-messages: "Cancellato(i) %AMOUNT% messaggio (i)"
 
 command.config.select-lang-below: "Seleziona la lingua nel riquadro corrente"
 command.config.select-roles-below: "Seleziona i ruoli da rimuovere quando l'audio è disattivato (il bot li aggiunge automaticamente dopo che la sanzione è terminata)"
+command.config.quotes: "Messaggi di aumento di livello:"
+command.config.quotes-disabled: "I messaggi di guadagno di livello ora sono disabilitati"
+command.config.quotes-enabled: "I messaggi di guadagno di livello sono ora abilitati"
 
 embeds.information.title: "PixBot - Informazioni"
 embeds.information.body: "Pix è un nuovo bot multitool, ti aiuta attraverso le sue numerose funzionalità per gestire e migliorare la tua esperienza di discord !\n\n Versione ``%VERSION%``\n Fatto con :heart: da %OWNER% \n\n Gestisce **%TOTAL_USERS%** utenti unici **%TOTAL_SERVERS%** server."
@@ -54,3 +58,7 @@ variables.lang-changed: "Lingua cambiata in ``%LANG%``"
 variables.config.mute: "Configurazione audio"
 variables.roles-selected: "Hai selezionato il ruolo(i) %ROLES%"
 variables.roles-no-selection: "Nessun ruolo selezionato"
+variables.no-data: "non si trovava niente"
+variables.channel: "Salotto"
+
+announcements.user.levelup: "Ben giocato %USER%! Ora sei **livello %LEVEL%**! :zap:"
