Auto updating lang files

--- a/lang/fr_FR.lang
+++ b/lang/fr_FR.lang
@@ -44,7 +44,7 @@ variables.lang: "Langue du Bot"
 variables.created-at: "Créé le ``%DATE%``"
 variables.sanctioned: "Sanction effectuée !"
 variables.undefined: "Non défini"
-variables.sanction.type: "Type"
+variables.sanctions.type: "Type"
 variables.moderator: "Modérateur"
 variables.duration: "Durée"
 variables.thank-you: "Merci !"
