Auto updating lang files

--- a/lang/fr_FR.lang
+++ b/lang/fr_FR.lang
@@ -62,3 +62,35 @@ variables.no-data: "Rien n'a pu être trouvé"
 variables.channel: "Salon"
 
 announcements.user.levelup: "Bien joué %USER% ! Tu es désormais **niveau %LEVEL%** ! :zap:"
+
+music.voice.notconnected: "Vous devez être dans un salon vocal pour faire cela !"
+music.voice.botnotconnected: "Vous devez d'abord lancer une musique !"
+music.voice.notinchannel: "Vous devez être dans le même salon vocal que le bot pour faire cela !"
+
+music.nowplaying.title: ":notes: En train de lire"
+music.nowplaying.duration: "Durée: %DURATION%"
+music.nowplaying.in: "Lecture dans %CHANNEL%"
+music.nowplaying.volume: "Volume %VOLUME%%"
+music.nowplaying.looped: "La piste actuelle sera lue en boucle"
+music.nowplaying.notlooped: "La piste actuelle ne sera plus lue en boucle"
+music.nowplaying.requestedby: "Ajoutée par %USER%"
+
+music.queue.empty: "La file d'attente est vide !"
+music.queue.cleared: "La file d'attente a été éffacée"
+music.queue.shuffled: "La file d'attente a été mise en aléatoire"
+music.queue.resumed: "La lecture des titres reprend"
+music.queue.paused: "La lecture des titres est mise en pause"
+music.queue.trackadded: ":notes: Musique ajoutée"
+
+music.search.noresults: "Le titre n'a pas pu être trouvé sur YouTube"
+music.search.playlist.loading: "Chargement de votre playlist..."
+music.search.playlist.loaded: "Votre playlist a bien été chargée"
+
+music.disconnected: "Déconnexion automatique suite à 5 minutes d'inactivité"
+music.notfound: "Le titre entré n'a pas été trouvé dans la file d'attente"
+music.removed: "Le titre %TRACK% a été supprimé de la file d'attente"
+music.error: "Erreur : %ERROR%"
+music.skipped: "La musique actuelle a été passée"
+music.queue: "File d'attente :"
+music.volumechanged: "Le volume a été passé à %VOLUME%%"
+music.notrequester: "Seul l'utilisateur qui a lancé la musique peut la passer"
