--- a/lang/en_US.lang
+++ b/lang/en_US.lang
@@ -62,3 +62,35 @@ variables.no-data: "Nothing could be found"
 variables.channel: "Channel"
 
 announcements.user.levelup: "Well played %USER%! You're now **level %LEVEL%**! :zap:"
+
+music.voice.notconnected: "You should be connected to a voice channel to do that!"
+music.voice.botnotconnected: "Launch a track before doing that!"
+music.voice.notinchannel: "You should be in the same channel as the bot to do that!"
+
+music.nowplaying.title: ":notes: Now playing"
+music.nowplaying.duration: "Duration: %DURATION%"
+music.nowplaying.in: "Playing in %CHANNEL%"
+music.nowplaying.volume: "Volume %VOLUME%%"
+music.nowplaying.looped: "The current track will be looped"
+music.nowplaying.notlooped: "The current track will no longer be looped"
+music.nowplaying.requestedby: "Requested by %USER%"
+
+music.queue.empty: "The queue is empty"
+music.queue.cleared: "The queue is now cleared"
+music.queue.shuffled: "The queue is now shuffled"
+music.queue.resumed: "The queue is no longer paused"
+music.queue.paused: "The queue is now paused"
+music.queue.trackadded: ":notes: Track added"
+
+music.search.noresults: "The track cannot be find on YouTube"
+music.search.playlist.loading: "Loading your playlist"
+music.search.playlist.loaded: "Your playlist has been loaded"
+
+music.disconnected: "Automatically disconnected after 5 minutes of inactivity"
+music.notfound: "The entered track cannot be find in the queue"
+music.removed: "The track %TRACK% has been removed from the queue"
+music.error: "Error : %ERROR%"
+music.skipped: "The current track has been skipped"
+music.queue: "Queue :"
+music.volumechanged: "Volume changed to %VOLUME%%"
+music.notrequester: "Only the user who requested the song can skip it"
