Updating auto updating pipeline

--- a/lang/en_US.lang
+++ b/lang/en_US.lang
@@ -1,20 +1,20 @@
-command.wrongusage=This command is invalid !
-command.nopermission=You are missing permission ``%PERMISSION%``
-command.error=Error !
-command.not-permitted=You can't do this!
-command.invalid-id=Please provide a valid id
-command.done=Done!
-command.invalid-args=Use /%COMMAND% with options !
+command.wrongusage: "This command is invalid !"
+command.nopermission: "You are missing permission ``%PERMISSION%``"
+command.error: "Error !"
+command.not-permitted: "You can't do this!"
+command.invalid-id: "Please provide a valid id"
+command.done: "Done!"
+command.invalid-args: "Use /%COMMAND% with options !"
 
-error.not-in-bounds='%VAR%' cannot be > %MAX% or < %MIN% !
-error.nothing-to-delete=Nothing to delete... (maybe messages are older than 2 weeks?)
-error.need-text-channel=Please provide a valid text channel
-error.message-not-found=The message cannot be found, maybe it's in another channel?
+error.not-in-bounds: "'%VAR%' cannot be > %MAX% or < %MIN% !"
+error.nothing-to-delete: "Nothing to delete... (maybe messages are older than 2 weeks?)"
+error.need-text-channel: "Please provide a valid text channel"
+error.message-not-found: "The message cannot be found, maybe it's in another channel?"
 
-command.mod.description=%TARGET% has been sanctionned
-command.mod.reason=Reason
-command.mod.unbanned=User unbanned!
-command.mod.unmuted=%USER% unmuted
+command.mod.description: "%TARGET% has been sanctionned"
+command.mod.reason: "Reason"
+command.mod.unbanned: "User unbanned!"
+command.mod.unmuted: "%USER% unmuted"
 command.mod.no-sanctions: "Could not find any sanction"
 command.mod.user-sanctions: "%USER%'s sanctions"
 command.mod.deleted-messages: "Deleted %AMOUNT% message(s)"
