--- a/lang/Messages.properties
+++ b/lang/Messages.properties
@@ -82,3 +82,4 @@ music.skipped=The current track has been skipped
 music.queue=Queue :
 music.volume-changed=Volume changed to %VOLUME%%
 music.not-requester=Only the user who requested the song can skip it
+dashboard: Dashboard
