--- a/lang/Messages.properties
+++ b/lang/Messages.properties
@@ -83,3 +83,4 @@ music.queue=Queue :
 music.volume-changed=Volume changed to %VOLUME%%
 music.not-requester=Only the user who requested the song can skip it
 dashboard: Dashboard
+view.online: View it online
